[package]
name = "holo-mld"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
enum-as-inner.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

holo-northbound = { path = "../holo-northbound" }
holo-protocol = { path = "../holo-protocol" }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true

[features]
default = []
testing = []
