[package]
name = "holo-northbound"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bitflags.workspace = true
chrono.workspace = true
derive-new.workspace = true
ipnetwork.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
yang2.workspace = true

holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[dev-dependencies]
holo-utils = { path = "../holo-utils" }

[build-dependencies]
convert_case = "0.6"
check_keyword.workspace = true
yang2.workspace = true
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true
