[package]
name = "holo-northbound"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
bitflags.workspace = true
chrono.workspace = true
derive-new.workspace = true
ipnetwork.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
yang3.workspace = true

holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[dev-dependencies]
holo-utils = { path = "../holo-utils" }

[build-dependencies]
check_keyword.workspace = true
convert_case.workspace = true
yang3 = { workspace = true, features = ["bundled"] }
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true
