[package]
name = "holo-ospf"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
arc-swap.workspace = true
bitflags.workspace = true
bytes.workspace = true
chrono.workspace = true
derive-new.workspace = true
enum-as-inner.workspace = true
fletcher.workspace = true
generational-arena.workspace = true
hmac.workspace = true
ipnetwork.workspace = true
internet-checksum.workspace = true
itertools.workspace = true
libc.workspace = true
md-5.workspace = true
nix.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
smallvec.workspace = true
socket2.workspace = true
tokio.workspace = true
tracing.workspace = true
yang3.workspace = true

holo-northbound = { path = "../holo-northbound" }
holo-protocol = { path = "../holo-protocol" }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[dev-dependencies]
const-addrs.workspace = true
criterion.workspace = true
maplit.workspace = true
yang3 = { workspace = true, features = ["bundled"] }

holo-ospf = { path = ".", features = ["testing", "deterministic"] }
holo-protocol = { path = "../holo-protocol", features = ["testing"] }
holo-utils = { path = "../holo-utils", features = ["testing"] }

[lints]
workspace = true

[features]
default = []
testing = []
deterministic = []

[[bench]]
name = "packet_encoding"
harness = false

[[bench]]
name = "packet_decoding"
harness = false
