[package]
name = "holo-protocol"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
derive-new.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
yang2.workspace = true

holo-northbound = { path = "../holo-northbound" }
holo-southbound = { path = "../holo-southbound" }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[features]
default = []
testing = []
