[package]
name = "holo-protocol"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
derive-new.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
yang3.workspace = true

holo-northbound = { path = "../holo-northbound" }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true

[features]
default = []
testing = []
