[package]
name = "holo-routing"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
bitflags.workspace = true
capctl.workspace = true
chrono.workspace = true
derive-new.workspace = true
enum-as-inner.workspace = true
futures.workspace = true
ipnetwork.workspace = true
prefix-trie.workspace = true
regex.workspace = true
rtnetlink.workspace = true
tokio.workspace = true
tracing.workspace = true
yang3.workspace = true

holo-northbound = { path = "../holo-northbound" }
holo-protocol = { path = "../holo-protocol" }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

holo-bfd = { path = "../holo-bfd", optional = true }
holo-bgp = { path = "../holo-bgp", optional = true }
holo-ldp = { path = "../holo-ldp", optional = true }
holo-ospf = { path = "../holo-ospf", optional = true }
holo-rip = { path = "../holo-rip", optional = true }

[lints]
workspace = true

[features]
bfd = ["dep:holo-bfd"]
bgp = ["dep:holo-bgp"]
ldp = ["dep:holo-ldp"]
ospf = ["dep:holo-ospf"]
rip = ["dep:holo-rip"]
