[package]
name = "holo-southbound"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
bitflags.workspace = true
bytes.workspace = true
derive-new.workspace = true
ipnetwork.workspace = true
libc.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

holo-utils = { path = "../holo-utils" }

[features]
default = []
testing = []
