[package]
name = "holo-system"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sysinfo = "0.30"

capctl.workspace = true
chrono.workspace = true
derive-new.workspace = true
phf.workspace = true
tokio.workspace = true
tracing.workspace = true
yang4.workspace = true

holo-northbound = { path = "../holo-northbound", features = ["system"] }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[build-dependencies]
yang4 = { workspace = true, features = ["bundled"] }
holo-northbound = { path = "../holo-northbound", features = ["system"] }
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true
