[package]
name = "holo-tools"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
check_keyword.workspace = true
clap.workspace = true
convert_case.workspace = true
num-traits.workspace = true
serde_json.workspace = true
similar.workspace = true
tokio.workspace = true
yang4 = { workspace = true, features = ["bundled"] }

holo-bfd = { path = "../holo-bfd", features = ["testing"] }
holo-bgp = { path = "../holo-bgp", features = ["testing"] }
holo-ldp = { path = "../holo-ldp", features = ["testing"] }
holo-igmp = { path = "../holo-igmp", features = ["testing"] }
holo-isis = { path = "../holo-isis", features = ["testing"] }
holo-rip = { path = "../holo-rip", features = ["testing"] }
holo-northbound = { path = "../holo-northbound" }
holo-ospf = { path = "../holo-ospf", features = ["testing"] }
holo-protocol = { path = "../holo-protocol", features = ["testing"] }
holo-utils = { path = "../holo-utils", features = ["testing"] }
holo-vrrp = { path = "../holo-vrrp", features = ["testing"] }
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true

[[bin]]
name = "replay"
path = "src/replay.rs"

[[bin]]
name = "yang_callbacks"
path = "src/yang_callbacks.rs"

[[bin]]
name = "yang_coverage"
path = "src/yang_coverage.rs"

[[bin]]
name = "yang_deviations"
path = "src/yang_deviations.rs"
