[package]
name = "holo-tools"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
check_keyword.workspace = true
clap.workspace = true
convert_case.workspace = true
num-traits.workspace = true
serde_json.workspace = true
similar.workspace = true
tokio.workspace = true
yang4 = { workspace = true, features = ["bundled"] }

holo-northbound = { path = "../holo-northbound" }
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true

[[bin]]
name = "yang_callbacks"
path = "src/yang_callbacks.rs"

[[bin]]
name = "yang_coverage"
path = "src/yang_coverage.rs"

[[bin]]
name = "yang_deviations"
path = "src/yang_deviations.rs"

[[bin]]
name = "yang_impls"
path = "src/yang_impls.rs"
