[package]
name = "holo-utils"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
vectorize = "0.2.0"

async-trait.workspace = true
bytes.workspace = true
capctl.workspace = true
chrono.workspace = true
derive-new.workspace = true
enum-as-inner.workspace = true
ipnetwork.workspace = true
libc.workspace = true
nix.workspace = true
num-derive.workspace = true
num-traits.workspace = true
pickledb.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
tokio.workspace = true
tracing.workspace = true
yang2.workspace = true

holo-yang = { path = "../holo-yang" }

[features]
default = []
testing = []
