[package]
name = "holo-utils"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
vectorize = "0.2.0"

arbitrary.workspace = true
bitflags.workspace = true
bytes.workspace = true
capctl.workspace = true
chrono.workspace = true
derive-new.workspace = true
enum-as-inner.workspace = true
ipnetwork.workspace = true
itertools.workspace = true
libc.workspace = true
nix.workspace = true
num-derive.workspace = true
num-traits.workspace = true
pickledb.workspace = true
prefix-trie.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
tokio.workspace = true
tracing.workspace = true
yang3.workspace = true

holo-yang = { path = "../holo-yang" }
reqwest = { version = "0.12.8", optional = true }

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
too_many_arguments = "allow"
manual_range_contains = "allow"

[features]
default = []
testing = []
fastclick = ["dep:reqwest"]
