[package]
name = "holo-yang"
version = "0.5.4"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "YANG module of Holo Routing, including embedded YANG models and utility code"

[dependencies]
maplit.workspace = true
serde.workspace = true
tracing.workspace = true
yang3.workspace = true

[lints]
workspace = true
