[package]
name = "holo-yang"
version = "0.5.6"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "YANG module of Holo Routing, including embedded YANG models and utility code"

[dependencies]
maplit.workspace = true
serde.workspace = true
tracing.workspace = true
yang4.workspace = true

[lints]
workspace = true

[features]
interface = []
keychain = []
policy = []
routing = []
system = []
bfd = []
bgp = []
igmp = []
isis = []
ldp = []
ospf = []
rip = []
vrrp = []
