[package]
name = "holo-replay"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true

holo-bfd = { path = "../../holo-bfd", features = ["testing"] }
holo-bgp = { path = "../../holo-bgp", features = ["testing"] }
holo-ldp = { path = "../../holo-ldp", features = ["testing"] }
holo-igmp = { path = "../../holo-igmp", features = ["testing"] }
holo-isis = { path = "../../holo-isis", features = ["testing"] }
holo-rip = { path = "../../holo-rip", features = ["testing"] }
holo-ospf = { path = "../../holo-ospf", features = ["testing"] }
holo-protocol = { path = "../../holo-protocol", features = ["testing"] }
holo-utils = { path = "../../holo-utils", features = ["testing"] }
holo-vrrp = { path = "../../holo-vrrp", features = ["testing"] }

[lints]
workspace = true

[[bin]]
name = "replay"
path = "src/main.rs"
